--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "mongodb": "^6.9.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.15",
