feat: 생성기 버튼 딜레이 및 로티 추가

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "lottie-react": "^2.4.0",
     "mongodb": "^6.9.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.15",
