--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.20",
     "lottie-react": "^2.4.0",
     "mongodb": "^6.9.0",
